@@ -1,4 +1,9 @@
-﻿drkns 23.04.2016 19:19:54 +0200 - build 4635
+﻿
+drkns 24.04.2016 10:02:26 +0200 - build 4636
+
+1. Уточнение 4635.
+
+drkns 23.04.2016 19:19:54 +0200 - build 4635
 
 1. По просьбам телезрителей: в диалоге копирования отображаем счётчики как "%done% / %total%", а не наоборот.
 
